--- a/backend/composer.json
+++ b/backend/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "~1.0",
         "mtdowling/cron-expression": "^1.2",
         "overtrue/laravel-youzan": "^1.0",
+        "phpoffice/phpspreadsheet": "^1.3",
         "predis/predis": "^1.1",
         "tightenco/collect": "^5.5"
     },
